--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 40px;
+    margin-bottom: -5px;
+    margin-top: -118px;
   }
   
   .container .header span {
@@ -18,6 +19,7 @@
     font-size: 20px;
     line-height: 24px;
     padding-top: 15px;
+    padding-bottom: 40px;
   }
   
   .container form {
@@ -96,7 +98,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-    color: #242424;
+    color: #fff;
   }
   
   .container form .footer a {
