--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -32,6 +32,7 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    padding-bottom: 15px;
   }
   
   .container form  .inputContainer label {
