--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -1,124 +1,119 @@
 .container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .container .header {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: -5px;
-    margin-top: -118px;
-  }
-  
-  .container .header span {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    padding-top: 15px;
-    padding-bottom: 40px;
-  }
-  
-  .container form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .container form  .inputContainer {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    padding-bottom: 15px;
-  }
-  
-  .container form  .inputContainer label {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    margin-bottom: 8px;
-  }
-  
-  .container form  .inputContainer input {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 16px;
-    width: 520px;
-    height: 49px;
-    border: 1px solid #00a0b0;
-    border-radius: 12px;
-    margin-bottom: 12px;
-    background: #242424;
-  
-  }
-  
-  .container form a {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    color: #5C73DB;
-  }
-  
-  .container form .button {
-    width: 520px;
-    height: 48px;
-    background: #00a0b0;
-    border-radius: 12px;
-    color: #fff;
-    border: none;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-  }
-  .container form .button:hover {
-    cursor: pointer;
-    opacity: 0.8;
-  }
-  
-  .container form .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px
-  }
-  
-  .container form .footer p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #fff;
-  }
-  
-  .container form .footer a {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-decoration-line: underline;
-    color: #5C73DB;
-  }
-  
-.logoImg{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.container .header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: -5px;
+  margin-top: -118px;
+}
 
-    width: 240px;
-    height: 240px;
+.container .header span {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  padding-top: 15px;
+  padding-bottom: 40px;
+}
 
-}  
+.container form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container form .inputContainer {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding-bottom: 15px;
+}
+
+.container form .inputContainer label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 8px;
+}
+
+.container form .inputContainer input {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 16px;
+  width: 520px;
+  height: 49px;
+  border: 1px solid #00a0b0;
+  border-radius: 12px;
+  margin-bottom: 12px;
+  background: #242424;
+}
+
+.container form a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  color: #5c73db;
+}
+
+.container form .button {
+  width: 520px;
+  height: 48px;
+  background: #00a0b0;
+  border-radius: 12px;
+  color: #fff;
+  border: none;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+.container form .button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.container form .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.container form .footer p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #fff;
+}
+
+.container form .footer a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration-line: underline;
+  color: #5c73db;
+}
+
+.logoImg {
+  width: 240px;
+  height: 240px;
+}
 
 .texts {
-
   padding-right: 10px;
-
 }
